# bitchange

./: .env.dev  README.md  docker-compose-test.yml  docker-compose.yml
.github/workflows/: backend.yml  bin.yml  docs.yml  frontend.yml
backend/: .flake8  .gitignore  .isort.cfg  pyproject.toml
backend/bitchange/stocks/: models.py
backend/bitchange/stocks/management/commands/: _index_loader.py  load_index.py
backend/bitchange/stocks/management/commands/data/: NASDAQ.txt
backend/bitchange/stocks/migrations/: 0001_initial.py
backend/bitchange/tests/test_stocks/test_management/test_commands/: conftest.py  test_index_loader.py  test_load_index.py
backend/bitchange/users/: admin.py  models.py
backend/bitchange/users/migrations/: 0001_initial.py
backend/bitchange/users/tests/: test_api.py  test_models.py
backend/bitchange/utils/models/: __init__.py  uuid.py
backend/config/: asgi.py  celery.py  urls.py
backend/config/settings/: base.py  dev.py  local.py  test.py
backend/docker/: celery_beat_entrypoint.sh  celery_worker_entrypoint.sh
backend/docker/dev/: Dockerfile
backend/docker/local/: Dockerfile
backend/docker/test/: Dockerfile  entrypoint.sh
backend/requirements/: base.txt  dev.txt  local.txt  test.txt
bitchange/: manage.py
bitchange/config/: urls.py  wsgi.py
bitchange/config/settings/: local.py
docs/: DevelopmentGuide.md
frontend/: .eslintrc.js  package.json
frontend/public/: index.html
frontend/src/: App.tsx  UserPool.ts
frontend/src/Utils/: index.ts  (+2 more)
infra/config/: main.tf  outputs.tf  variables.tf
infra/templates/: s3.yml
(+19 files in other folders)
