[tool.black]
skip-string-normalization = true
exclude = """
/(
    | migrations
)/
"""

[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.1.6"
psycopg2 = "2.8.6"
djangorestframework = "3.12.2"
django-cors-headers = "3.7.0"
cryptography = "3.3.2"
django-cognito-jwt = "0.0.3"

[tool.poetry.dev-dependencies]
pytest-django = "^4.1.0"
flake8 = "^3.8.4"
isort = "^5.7.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
